Contratos gravando corretamente e listando também
