# backend/route/locadorRoute.js
@@ -11,11 +11,18 @@ router.get('/listar', (req,res) =>{
     ctrl.listar(req,res);
 });
 
-router.get('/oter/:idLocador', (req,res)=>{
+router.get('/obter/:idLocador', (req,res)=>{
     // #swagger.tags = ['Locadores']
     // #swagger.summary = 'Obtem um locador cadastrado'
 
     ctrl.obter(req,res);
+});
+
+router.get('/obterPorId/:idLocador', (req,res)=>{
+    // #swagger.tags = ['Locadores']
+    // #swagger.summary = 'Obtem um locador cadastrado por meio do id'
+
+    ctrl.obterPorId(req,res);
 });
 
 module.exports = router;
